--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
    <div class="header">
     <nav>
-        <img src="/photos/logo.png" class="logo">
+        <img src="photos/logo.png" class="logo">
         <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
             <li><a href="">PORTFOLIO</a></li>
             <li><a href="">SERVICES</a></li>
         </ul>
-        <img src="/photos/menu.png" class="menu">
+        <img src="photos/menu.png" class="menu">
     </nav>
 
     <div class="text-box">
@@ -26,7 +26,7 @@
         <a href="">Contact me</a>  <a href=""class="btn">Download CV</a> 
     </div>
 
-    <img src="/photos/user.png" class="user">
+    <img src="photos/user.png" class="user">
 
    </div>
 
